--- a/ShowingGoodMovies/Base.lproj/Main.storyboard
+++ b/ShowingGoodMovies/Base.lproj/Main.storyboard
@@ -8,19 +8,100 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Movie List View Controller-->
+        <!--Amazing Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="MovieListViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="MovieListViewController" customModule="ShowingGoodMovies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bxC-a6-rSY">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieCell" rowHeight="175" id="1Nr-kE-JBV" customClass="MovieTableViewCell" customModule="ShowingGoodMovies" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="175"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Nr-kE-JBV" id="psQ-ZD-Fn0">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KS1-Wu-c5O">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vGP-kF-ULl">
+                                                            <rect key="frame" x="20" y="20" width="80" height="135"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="80" id="b6w-am-G6M"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GST-Dq-eLY">
+                                                            <rect key="frame" x="108" y="20" width="286" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFe-ts-xiV">
+                                                            <rect key="frame" x="108" y="49" width="286" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUq-VF-kYA">
+                                                            <rect key="frame" x="108" y="78" width="286" height="77"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="dFe-ts-xiV" secondAttribute="trailing" constant="20" symbolic="YES" id="0Rm-rf-Ik5"/>
+                                                        <constraint firstItem="vUq-VF-kYA" firstAttribute="leading" secondItem="vGP-kF-ULl" secondAttribute="trailing" constant="8" symbolic="YES" id="1ct-ow-aY4"/>
+                                                        <constraint firstItem="dFe-ts-xiV" firstAttribute="top" secondItem="GST-Dq-eLY" secondAttribute="bottom" constant="8" symbolic="YES" id="2hH-ta-eln"/>
+                                                        <constraint firstItem="GST-Dq-eLY" firstAttribute="leading" secondItem="vGP-kF-ULl" secondAttribute="trailing" constant="8" symbolic="YES" id="8ZC-AC-qCX"/>
+                                                        <constraint firstItem="vGP-kF-ULl" firstAttribute="top" secondItem="KS1-Wu-c5O" secondAttribute="top" constant="20" symbolic="YES" id="9u1-Jh-VNf"/>
+                                                        <constraint firstAttribute="trailing" secondItem="GST-Dq-eLY" secondAttribute="trailing" constant="20" symbolic="YES" id="IcO-Nk-kAY"/>
+                                                        <constraint firstAttribute="bottom" secondItem="vUq-VF-kYA" secondAttribute="bottom" constant="20" symbolic="YES" id="eEw-eM-io8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="vUq-VF-kYA" secondAttribute="trailing" constant="20" symbolic="YES" id="gPt-1c-b7F"/>
+                                                        <constraint firstItem="vUq-VF-kYA" firstAttribute="top" secondItem="dFe-ts-xiV" secondAttribute="bottom" constant="8" symbolic="YES" id="lCO-9b-plY"/>
+                                                        <constraint firstItem="GST-Dq-eLY" firstAttribute="top" secondItem="vGP-kF-ULl" secondAttribute="top" id="wOe-Le-sCc"/>
+                                                        <constraint firstAttribute="bottom" secondItem="vGP-kF-ULl" secondAttribute="bottom" constant="20" symbolic="YES" id="yyI-JY-cxw"/>
+                                                        <constraint firstItem="dFe-ts-xiV" firstAttribute="leading" secondItem="vGP-kF-ULl" secondAttribute="trailing" constant="8" symbolic="YES" id="z7I-5e-v1r"/>
+                                                        <constraint firstItem="vGP-kF-ULl" firstAttribute="leading" secondItem="KS1-Wu-c5O" secondAttribute="leading" constant="20" symbolic="YES" id="zg2-8Y-QKS"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="KS1-Wu-c5O" secondAttribute="trailing" id="2dk-9s-QlO"/>
+                                                <constraint firstItem="KS1-Wu-c5O" firstAttribute="leading" secondItem="psQ-ZD-Fn0" secondAttribute="leading" id="5HC-vv-0ea"/>
+                                                <constraint firstAttribute="bottom" secondItem="KS1-Wu-c5O" secondAttribute="bottom" id="ATJ-pJ-YnY"/>
+                                                <constraint firstItem="KS1-Wu-c5O" firstAttribute="top" secondItem="psQ-ZD-Fn0" secondAttribute="top" id="uBs-eP-EGx"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="movieImage" destination="vGP-kF-ULl" id="5TO-mw-y2f"/>
+                                            <outlet property="name" destination="GST-Dq-eLY" id="xm3-ZN-WRX"/>
+                                            <outlet property="overview" destination="vUq-VF-kYA" id="iqN-7T-Cbj"/>
+                                            <outlet property="score" destination="dFe-ts-xiV" id="lLh-FO-3Z4"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bxC-a6-rSY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5rj-5I-keW"/>
+                            <constraint firstItem="bxC-a6-rSY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="es9-2x-sQP"/>
+                            <constraint firstItem="bxC-a6-rSY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qsh-UB-h6a"/>
+                            <constraint firstAttribute="bottom" secondItem="bxC-a6-rSY" secondAttribute="bottom" id="u3U-Ne-v2p"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Yze-mU-hjn"/>
+                    <navigationItem key="navigationItem" title="Amazing Movies" id="504-8t-lDV"/>
                     <connections>
-                        <segue destination="Zbo-6c-pOE" kind="show" id="RXw-Xn-kC1"/>
+                        <segue destination="Zbo-6c-pOE" kind="show" identifier="detail" id="RXw-Xn-kC1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -34,14 +115,39 @@
                     <view key="view" contentMode="scaleToFill" id="vpV-R4-M8S">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="crx-ZC-fTx">
+                                <rect key="frame" x="0.0" y="88" width="414" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="bcw-9g-7aC"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="MovieName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Udw-6P-Zib">
+                                <rect key="frame" x="20" y="396" width="91" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="xne-Qw-kqM"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="crx-ZC-fTx" firstAttribute="top" secondItem="xne-Qw-kqM" secondAttribute="top" id="A6v-I8-p9z"/>
+                            <constraint firstItem="Udw-6P-Zib" firstAttribute="top" secondItem="crx-ZC-fTx" secondAttribute="bottom" constant="8" symbolic="YES" id="Lco-F1-8tO"/>
+                            <constraint firstItem="crx-ZC-fTx" firstAttribute="leading" secondItem="xne-Qw-kqM" secondAttribute="leading" id="W0S-9T-jbr"/>
+                            <constraint firstItem="crx-ZC-fTx" firstAttribute="trailing" secondItem="xne-Qw-kqM" secondAttribute="trailing" id="fRu-Qv-gLf"/>
+                            <constraint firstItem="Udw-6P-Zib" firstAttribute="leading" secondItem="xne-Qw-kqM" secondAttribute="leading" constant="20" id="zve-vR-l2i"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="6P9-96-lfG"/>
+                    <connections>
+                        <outlet property="movieImage" destination="crx-ZC-fTx" id="SgQ-TH-t9l"/>
+                        <outlet property="name" destination="Udw-6P-Zib" id="HC3-f1-FaW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4bT-6m-Wqg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1838" y="88"/>
+            <point key="canvasLocation" x="1837.68115942029" y="87.723214285714278"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="e1B-wy-UbM">
