--- a/ShowingGoodMovies/Base.lproj/Main.storyboard
+++ b/ShowingGoodMovies/Base.lproj/Main.storyboard
@@ -21,20 +21,20 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieCell" rowHeight="175" id="1Nr-kE-JBV" customClass="MovieTableViewCell" customModule="ShowingGoodMovies" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24.5" width="414" height="175"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="MovieCell" rowHeight="200" id="1Nr-kE-JBV" customClass="MovieTableViewCell" customModule="ShowingGoodMovies" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="24.5" width="414" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="1Nr-kE-JBV" id="psQ-ZD-Fn0">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KS1-Wu-c5O">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vGP-kF-ULl">
-                                                            <rect key="frame" x="20" y="20" width="100" height="135"/>
+                                                            <rect key="frame" x="0.0" y="20" width="120" height="160"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="100" id="b6w-am-G6M"/>
+                                                                <constraint firstAttribute="width" constant="120" id="b6w-am-G6M"/>
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GST-Dq-eLY">
@@ -50,7 +50,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUq-VF-kYA">
-                                                            <rect key="frame" x="128" y="107" width="266" height="48"/>
+                                                            <rect key="frame" x="128" y="107" width="266" height="73"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -79,7 +79,7 @@
                                                         <constraint firstItem="GST-Dq-eLY" firstAttribute="top" secondItem="vGP-kF-ULl" secondAttribute="top" id="wOe-Le-sCc"/>
                                                         <constraint firstAttribute="bottom" secondItem="vGP-kF-ULl" secondAttribute="bottom" constant="20" symbolic="YES" id="yyI-JY-cxw"/>
                                                         <constraint firstItem="dFe-ts-xiV" firstAttribute="leading" secondItem="vGP-kF-ULl" secondAttribute="trailing" constant="8" symbolic="YES" id="z7I-5e-v1r"/>
-                                                        <constraint firstItem="vGP-kF-ULl" firstAttribute="leading" secondItem="KS1-Wu-c5O" secondAttribute="leading" constant="20" symbolic="YES" id="zg2-8Y-QKS"/>
+                                                        <constraint firstItem="vGP-kF-ULl" firstAttribute="leading" secondItem="KS1-Wu-c5O" secondAttribute="leading" id="zg2-8Y-QKS"/>
                                                     </constraints>
                                                 </view>
                                             </subviews>
